--- a/test-output/old/HC Sanity Test Suite/methods-alphabetical.html
+++ b/test-output/old/HC Sanity Test Suite/methods-alphabetical.html
@@ -1,44 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>HC Sanity Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7996a0">  <td>20/04/30 15:08:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Application_url_check_Test.application_url_check_Test()[pri:0, instance:com.ibm.sanity.tests.Application_url_check_Test@6767c1fc]">application_url_check_Test</td> 
+<tr bgcolor="f8966d">  <td>20/05/03 01:22:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_VIEW_ALL_Test.NGMeteringApp_LoginTest()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@c038203]">NGMeteringApp_LoginTest</td> 
   <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>20/04/30 15:07:09</td>   <td>-96931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Application_url_check_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.Application_url_check_Test@6767c1fc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>20/04/30 15:09:02</td>   <td>16179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.ibm.sanity.tests.LoginTest@29ee9faa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f8966d">  <td>20/04/30 15:11:13</td>   <td>147762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_VIew_All_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.HC_VIew_All_Test@c038203]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>20/04/30 15:13:30</td>   <td>284155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_SAP_Rainbow_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Rainbow_Test@cc285f4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>20/04/30 15:15:59</td>   <td>433825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_SAP_Phoenix_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Phoenix_Test@55f3ddb1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>20/04/30 15:07:09</td>   <td>-96947</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Application_url_check_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.Application_url_check_Test@6767c1fc]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>20/04/30 15:09:02</td>   <td>16179</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.LoginTest@29ee9faa]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f8966d">  <td>20/04/30 15:11:13</td>   <td>147760</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_VIew_All_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.HC_VIew_All_Test@c038203]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>20/04/30 15:13:30</td>   <td>284155</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_SAP_Rainbow_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Rainbow_Test@cc285f4]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>20/04/30 15:15:59</td>   <td>433825</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HC_SAP_Phoenix_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Phoenix_Test@55f3ddb1]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>20/04/30 15:08:56</td>   <td>10136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Application_url_check_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.Application_url_check_Test@6767c1fc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>20/04/30 15:11:11</td>   <td>145739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.ibm.sanity.tests.LoginTest@29ee9faa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f8966d">  <td>20/04/30 15:13:28</td>   <td>282202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HC_VIew_All_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.HC_VIew_All_Test@c038203]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>20/04/30 15:15:57</td>   <td>431885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HC_SAP_Rainbow_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Rainbow_Test@cc285f4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>20/04/30 15:18:35</td>   <td>589188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HC_SAP_Phoenix_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Phoenix_Test@55f3ddb1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>20/04/30 15:10:05</td>   <td>79524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validLoginTest()[pri:0, instance:com.ibm.sanity.tests.LoginTest@29ee9faa]">validLoginTest</td> 
+<tr bgcolor="dc63ce">  <td>20/05/03 01:21:34</td>   <td>-58914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_LoginTest.NGMeteringApp_Login_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@29ee9faa]">NGMeteringApp_Login_Test</td> 
   <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f8966d">  <td>20/04/30 15:12:06</td>   <td>200078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HC_VIew_All_Test.validLoginTest()[pri:0, instance:com.ibm.sanity.tests.HC_VIew_All_Test@c038203]">validLoginTest</td> 
+<tr bgcolor="c78c6b">  <td>20/05/03 01:27:12</td>   <td>278610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_SAP_Phoenix_Test.NGMeteringApp_SAPPhoenix_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@55f3ddb1]">NGMeteringApp_SAPPhoenix_Test</td> 
   <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>20/04/30 15:14:34</td>   <td>348517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HC_SAP_Rainbow_Test.validLoginTest()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Rainbow_Test@cc285f4]">validLoginTest</td> 
+<tr bgcolor="b4c3ab">  <td>20/05/03 01:24:04</td>   <td>90623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_SAP_Rainbow_Test.NGMeteringApp_SAPRainbow_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@cc285f4]">NGMeteringApp_SAPRainbow_Test</td> 
   <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>20/04/30 15:17:08</td>   <td>502942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HC_SAP_Phoenix_Test.validLoginTest()[pri:0, instance:com.ibm.sanity.tests.HC_SAP_Phoenix_Test@55f3ddb1]">validLoginTest</td> 
+<tr bgcolor="7996a0">  <td>20/05/03 01:20:45</td>   <td>-107994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_URL_Test.NGMeteringApp_url_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@6767c1fc]">NGMeteringApp_url_Test</td> 
   <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>20/05/03 01:20:09</td>   <td>-143867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@6767c1fc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>20/05/03 01:21:02</td>   <td>-91068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@29ee9faa]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>20/05/03 01:21:59</td>   <td>-33475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_VIEW_ALL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@c038203]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>20/05/03 01:23:25</td>   <td>51609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@cc285f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>20/05/03 01:26:37</td>   <td>244583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@55f3ddb1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>20/05/03 01:20:09</td>   <td>-143884</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@6767c1fc]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>20/05/03 01:21:02</td>   <td>-91077</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@29ee9faa]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>20/05/03 01:21:59</td>   <td>-33479</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_VIEW_ALL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@c038203]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>20/05/03 01:23:24</td>   <td>51601</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@cc285f4]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>20/05/03 01:26:37</td>   <td>244578</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@55f3ddb1]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>20/05/03 01:20:56</td>   <td>-97013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_URL_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@6767c1fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>20/05/03 01:21:58</td>   <td>-35364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_LoginTest.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@29ee9faa]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>20/05/03 01:23:23</td>   <td>49746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_VIEW_ALL_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@c038203]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>20/05/03 01:26:35</td>   <td>242119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_SAP_Rainbow_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@cc285f4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>20/05/03 01:28:09</td>   <td>335711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_SAP_Phoenix_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@55f3ddb1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
 </table>
