--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>20/05/03 18:13:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_SAP_Rainbow_Test.NGMeteringApp_SAPRainbow_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@475530b9]">NGMeteringApp_SAPRainbow_Test</td> 
-  <td>main@1508646930</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>20/05/03 18:09:49</td>   <td>-237926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@475530b9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>20/05/03 18:09:49</td>   <td>-237950</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@475530b9]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>20/05/03 18:15:19</td>   <td>91608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_SAP_Rainbow_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@475530b9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>20/05/05 11:10:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_URL_Test.NGMeteringApp_URL_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@46d56d67]">NGMeteringApp_URL_Test</td> 
+  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>20/05/05 11:09:01</td>   <td>-87059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@46d56d67]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>20/05/05 11:09:01</td>   <td>-87079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@46d56d67]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>20/05/05 11:10:39</td>   <td>11199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_URL_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@46d56d67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
 </table>
