--- a/test-output/old/NG Metering Application Sanity Test Suite/classes.html
+++ b/test-output/old/NG Metering Application Sanity Test Suite/classes.html
@@ -45,7 +45,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NGMeteringApp_url_Test</td>
+<td>NGMeteringApp_URL_Test</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -72,14 +72,14 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test</td>
+<td>com.ibm.sanity.tests.NG_Metering_App_DB_Connectivity_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NGMeteringApp_LoginTest</td>
+<td>NG_Metering_App_DBConnectivity_Test</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
