--- a/test-output/old/NG Metering Application Sanity Test Suite/methods.html
+++ b/test-output/old/NG Metering Application Sanity Test Suite/methods.html
@@ -1,44 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NG Metering Application Sanity Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>20/05/04 14:09:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@14acaea5]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>20/05/04 14:09:48</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@14acaea5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>20/05/04 14:10:43</td>   <td>54576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_URL_Test.NGMeteringApp_url_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@14acaea5]">NGMeteringApp_url_Test</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>20/05/04 14:10:54</td>   <td>65899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_URL_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@14acaea5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>20/05/04 14:11:00</td>   <td>71956</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@46d56d67]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>20/05/04 14:11:00</td>   <td>71959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@46d56d67]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>20/05/04 14:12:03</td>   <td>135342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_LoginTest.NGMeteringApp_Login_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@46d56d67]">NGMeteringApp_Login_Test</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>20/05/04 14:14:06</td>   <td>258024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_LoginTest.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@46d56d67]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>20/05/04 14:14:08</td>   <td>260191</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_VIEW_ALL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@d8355a8]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>20/05/04 14:14:08</td>   <td>260199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_VIEW_ALL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@d8355a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>20/05/04 14:15:53</td>   <td>365163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_VIEW_ALL_Test.NGMeteringApp_LoginTest()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@d8355a8]">NGMeteringApp_LoginTest</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>20/05/04 14:17:29</td>   <td>461192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_VIEW_ALL_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_VIEW_ALL_Test@d8355a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="76ae94">  <td>20/05/04 14:17:32</td>   <td>464136</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@59fa1d9b]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="76ae94">  <td>20/05/04 14:17:32</td>   <td>464140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@59fa1d9b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="76ae94">  <td>20/05/04 14:18:15</td>   <td>507160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_SAP_Rainbow_Test.NGMeteringApp_SAPRainbow_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@59fa1d9b]">NGMeteringApp_SAPRainbow_Test</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="76ae94">  <td>20/05/04 14:19:38</td>   <td>589482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_SAP_Rainbow_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@59fa1d9b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/04 14:19:40</td>   <td>592124</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@28d25987]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/04 14:19:40</td>   <td>592135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/04 14:20:29</td>   <td>641265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NG_Metering_App_SAP_Phoenix_Test.NGMeteringApp_SAPPhoenix_Test()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@28d25987]">NGMeteringApp_SAPPhoenix_Test</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/04 14:21:50</td>   <td>721514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NG_Metering_App_SAP_Phoenix_Test.tearDown()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
+<tr bgcolor="c7c2a6">  <td>20/05/04 23:56:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@523884b2]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="c7c2a6">  <td>20/05/04 23:56:04</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_URL_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_URL_Test@523884b2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/05/04 23:56:16</td>   <td>11474</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@5b275dab]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/05/04 23:56:16</td>   <td>11475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_LoginTest.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_LoginTest@5b275dab]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>20/05/04 23:56:26</td>   <td>21099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_DB_Connectivity_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_DB_Connectivity_Test@61832929]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>20/05/04 23:56:26</td>   <td>21099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_DB_Connectivity_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_DB_Connectivity_Test@61832929]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>20/05/04 23:56:35</td>   <td>30967</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@29774679]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>20/05/04 23:56:35</td>   <td>30967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Rainbow_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Rainbow_Test@29774679]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/05/04 23:56:45</td>   <td>40688</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUpBeforeClass()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@3ffc5af1]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/05/04 23:56:45</td>   <td>40689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NG_Metering_App_SAP_Phoenix_Test.setUp()[pri:0, instance:com.ibm.sanity.tests.NG_Metering_App_SAP_Phoenix_Test@3ffc5af1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
 </table>
